--- a/app/views/blog_posts/_form.html.erb
+++ b/app/views/blog_posts/_form.html.erb
@@ -14,6 +14,17 @@
     </div>
 
     <div>
+        <%= form.label :cover_image %>
+        <% if blog_post.cover_image.attached? %>
+            <div id="<%= dom_id(blog_post, :cover_image) %>">
+                <%= image_tag blog_post.cover_image, class: "w-1/3" %>
+                <%= link_to "Remove Cover Image", blog_post_cover_image_path(blog_post), data: { turbo_method: :delete} %>
+            </div>
+        <% end %>
+        <%= form.file_field :cover_image %>
+    </div>
+
+    <div>
         <%= form.label :content %>
         <%= form.rich_text_area :content %>
     </div>
