--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -2,6 +2,7 @@
 
 <% @blog_posts.each do |blog_post| %> 
     <div>
+        <%= image_tag blog_post.cover_image if blog_post.cover_image.attached? %>
         <h2> <%= link_to blog_post.title, blog_post_path(blog_post) %> </h2>
         <% if blog_post.draft? %>
             <div class = "p-2 rounded bg-gray-100 text-gray-900" > Draft </div>
@@ -12,6 +13,8 @@
     </div>
 <% end %>
 
-<div class="mt-16">
-    <%== pagy_nav(@pagy) %>
-</div>
+<% if @pagy.count > @pagy.limit %>
+    <div class="mt-16">
+        <%== pagy_nav(@pagy) %>
+    </div>
+<% end %>
